--- a/Data Structures/Tuples/Tuples1.ipynb
+++ b/Data Structures/Tuples/Tuples1.ipynb
@@ -2,6 +2,265 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Creating a Tuple\n",
+    "empty_tuple = ()\n",
+    "print(empty_tuple)\n",
+    "print(type(empty_tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = list()\n",
+    "print(type(lst))\n",
+    "tpl = tuple()\n",
+    "print(type(tpl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = tuple([1, 2, 3, 4, 5, 6, 7 , 8])\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Madhur', 3.2346, True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "muxed_tuple = (1, \"Madhur\", 3.2346, True)\n",
+    "print(muxed_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Accedding Tuple elements\n",
+    "\n",
+    "num[0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6, 7, 8, 1, 'Madhur', 3.2346, True)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Tuple Operations\n",
+    "\n",
+    "num + muxed_tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Immutable nature of Tuples\n",
+    "#tuple Methods\n",
+    "\n",
+    "print(num.count(2))     #count the number of occurences of the element\n",
+    "print(num.index(3))     # In which index third element is present"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Madhur', 3.2332)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Packing and unpacking Tuples\n",
+    "\n",
+    "packed_tup = 1, \"Madhur\", 3.2332    # Pack them in a tuple\n",
+    "print(packed_tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Madhur\n",
+      "3.2332\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unpacking a Tuple\n",
+    "\n",
+    "a, b, c = packed_tup\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3, 4, 5]\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unpacking with Star\n",
+    "\n",
+    "nums = (1, 2, 3, 4, 5, 6)\n",
+    "first, *middle, last = nums\n",
+    "print(first)\n",
+    "print(middle)\n",
+    "print(last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 3, 4), (4, 5, 6, 7), (1, 'hello', 3.12, 'A')]\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested Tuples\n",
+    "\n",
+    "nt = [(1, 2, 3, 4), (4, 5, 6, 7), (1, \"hello\", 3.12, \"A\")]\n",
+    "print(nt)\n",
+    "print(nt[2][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 \n",
+      "4 5 6 7 \n",
+      "1 hello 3.12 A \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterating over nested Tuples\n",
+    "\n",
+    "for sub_tuple in nt:\n",
+    "    for item in sub_tuple:\n",
+    "        print(item, end = \" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +268,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
