--- a/Data Structures/Tuples/tuple_assignment.ipynb
+++ b/Data Structures/Tuples/tuple_assignment.ipynb
@@ -70,7 +70,234 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple with the first 10 positive integers. Print the tuple.\n",
+    "num1 = tuple([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "print(num1)\n",
+    "\n",
+    "# Using for loop\n",
+    "# num = tuple()\n",
+    "# for num in range(11):\n",
+    "#     tuple.append(num)\n",
+    "# print(num)\n",
+    "\n",
+    "# Using range\n",
+    "num = tuple(range(1, 11))\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "20baa857",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the first, middle, and last elements of the tuple created in Assignment 1.\n",
+    "\n",
+    "print(num1[0])\n",
+    "print(num1[2])\n",
+    "print(num1[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4cf338ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(8, 9, 10)\n",
+      "(3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the first three elements, the last three elements, and the elements from index 2 to 5 of the tuple created in Assignment 1.\n",
+    "\n",
+    "print(num1[0:3])\n",
+    "print(num1[-3:])\n",
+    "print(num1[2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "75eb0be2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2, 3), (2, 3, 4), (6, 7, 8))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a nested tuple representing a 3x3 matrix and print the matrix. Access and print the element at the second row and third column.\n",
+    "\n",
+    "num2 = tuple([(1, 2, 3), (2, 3, 4), (6, 7, 8)])\n",
+    "print(num2)\n",
+    "num2[1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "586c31b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenate two tuples: (1, 2, 3) and (4, 5, 6). Print the resulting tuple.\n",
+    "\n",
+    "t1 = tuple([1, 2, 3])\n",
+    "t2 = tuple([4, 5, 6])\n",
+    "\n",
+    "t12 = t1 + t2\n",
+    "print(t12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "52a6d7c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple with duplicate elements and count the occurrences of an element. Find the index of the first occurrence of an element in the tuple.\n",
+    "\n",
+    "tup = tuple([1, 2, 2, 3, 4, 5, 23, 44, 23, 45, 23])\n",
+    "print(tup.count(23))\n",
+    "print(tup.index(23))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "28be1366",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple with 5 elements and unpack it into 5 variables. Print the variables.\n",
+    "\n",
+    "tup2 = ((1, 2, 3, 4, 5))\n",
+    "print(tup2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "64df801c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c, d, e = tup2\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a4cccece",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert a list of the first 5 positive integers to a tuple. Print the tuple.\n",
+    "\n",
+    "lst = [1, 2, 3, 4, 5]\n",
+    "print(type(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "2182a0a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -78,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
