--- a/Data Structures/Tuples/tuple_assignment_solution.ipynb
+++ b/Data Structures/Tuples/tuple_assignment_solution.ipynb
@@ -72,9 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix:\n",
+      "(1, 2, 3)\n",
+      "(4, 5, 6)\n",
+      "(7, 8, 9)\n",
+      "Element at second row and third column: 6\n"
+     ]
+    }
+   ],
    "source": [
     "matrix = (\n",
     "    (1, 2, 3),\n",
@@ -119,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Occurrences of 4: 3\n",
+      "Index of first occurrence of 2: 1\n"
+     ]
+    }
+   ],
    "source": [
     "tpl = (1, 2, 2, 3, 4, 4, 4, 5)\n",
     "print(f\"Occurrences of 4: {tpl.count(4)}\")\n",
@@ -139,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5\n"
+     ]
+    }
+   ],
    "source": [
     "tpl = (1, 2, 3, 4, 5)\n",
     "a, b, c, d, e = tpl\n",
@@ -179,9 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2, 3), (4, 5, 6), (7, 8, 9))\n"
+     ]
+    }
+   ],
    "source": [
     "tpl_of_tpls = (\n",
     "    (1, 2, 3),\n",
@@ -202,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "tpl = (1, 2, 3, 4, 5)\n",
     "lst = list(tpl)\n",
@@ -224,9 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"hello\"\n",
     "tpl = tuple(string)\n",
@@ -270,7 +323,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(4, 5, 6)\n",
+      "(7, 8, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "nested_tpl = (\n",
     "    (1, 2, 3),\n",
@@ -313,9 +376,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum: 1\n",
+      "Maximum: 5\n",
+      "Sum: 15\n"
+     ]
+    }
+   ],
    "source": [
     "def min_in_tuple(tpl):\n",
     "    return min(tpl)\n",
@@ -331,11 +404,19 @@
     "print(f\"Maximum: {max_in_tuple(sample_tpl)}\")\n",
     "print(f\"Sum: {sum_of_tuple(sample_tpl)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7210fb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -349,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
