--- a/Data Structures/list_assignment_solution/list_Assignment.ipynb
+++ b/Data Structures/list_assignment_solution/list_Assignment.ipynb
@@ -372,30 +372,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43c1e36d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mstudent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'sort'"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba32654d",
+   "id": "718160e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Creating a Tuple"
+   ]
   }
  ],
  "metadata": {
